<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppAgenda</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity1">Lista de eventos</string>
    <string name="title_activity_activity2">Agendar evento</string>
    <string name="title_activity_activity3">Evento</string>
    <string name="title_event">Titulo</string>
    <string name="description">Descripcion</string>
    <string name="date">ejemplo fecha 01/01/2015</string>
    <string name="time">ejemplo hora 12:00am</string>
    <string name="agenda">Agendar cita</string>
    <string name="UptadeAgenda">Editar cita</string>
    <string name="new_meeting">Nueva citas</string>
    <string name="view_meeting">ver citas</string>
    <string name="title_activity_activity4">Editar Evento</string>
    <string name="title_activity_activity5">Iniciar sesion</string>
    <string name="login">Iniciar</string>
    <string name="register">Registro</string>
    <string name="name">Nombre</string>
    <string name="register2">Registrar</string>
    <string name="title_activity_activity6">Registro</string>
    <string name="Password">Contraseña</string>
    <string name="User">Usuario</string>
    <string name="Email">Correo</string>
     

</resources>
